tdf#158945: blind fix (try to decrease pending operations limit)

*If* the crash in the bug was caused by OOM in Vulkan, then *maybe*
it was exactly the case mentioned in the comment above:

> queueing many tiny bitmaps ... may make [Skia] even run out of memory

Let's try to reduce the threshold dynamically, from 1000 down, in the
hope that this would avoid the OOM in the specific HW. If it doesn't,
it will eventually still abort().

Change-Id: If6151d4f273a5f938030121d13c268bc9906fa23
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/161516
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>